# ausmt

./: .readthedocs.yaml  CONTRIBUTING.md  NOTICE  README.md  RUNBOOK-DEV.md  SECURITY.md
.github/workflows/: build-products.yml  deploy-images.yml  gateway-ci.yml  portal-ci.yml
contract/: attribution_profiles.json  columns.json  generate.py  licenses.json
deploy/: .dockerignore  .env.example  .gitignore  Makefile  README.md  backup.sh  compose.dev.yaml  compose.yaml
deploy/docker/: engine.Dockerfile  gateway-entrypoint.sh  gateway.Dockerfile  portal.Dockerfile
deploy/frontdoor/: .env.example  Caddyfile  README.md  RUNBOOK.md  acl-policy.hujson  ausmt-frontdoor-logs.service  ausmt-frontdoor-logs.timer  compose.yaml  install-frontdoor.sh  ship-frontdoor-logs.sh
deploy/scripts/: actions.sh  (+7 more)
docs/: .gitignore  mkdocs.yml  requirements.txt
engine/: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements-mtmetadata.txt  requirements.txt
engine/ausmt_science/: run.py
engine/ausmt_science/decomposition/: README.md  __init__.py
engine/ausmt_science/distortion/: __init__.py
engine/ausmt_science/exports/: __init__.py
engine/ausmt_science/ingest/: __init__.py  normalize.py
engine/ausmt_science/provenance/: __init__.py
engine/ausmt_science/quicklooks/: __init__.py
engine/ausmt_science/strike/: __init__.py
engine/data/: README.md
engine/data/sample-survey/: README.md  survey.yaml
engine/data/sample-survey/transfer_functions/edi/: Vulcan_A1.edi  Vulcan_A2.edi
engine/environments/: README.md  environment-lock.yml  environment.yml  requirements-mtmetadata-lock.txt
engine/extract/: __init__.py  _contract.py  _conventions.py  _coordaccess.py  _edi_catalog.py  _edi_science.py  _edi_tf.py  _ediparse.py  _license_text.py  _mth5.py  _mtm.py  build_portal.py  cache.py  compare_mth5.py
engine/schema/: build_report.schema.json  manifest.schema.json  mtcat.schema.json
engine/scripts/: refresh_pid_status.py  verify.py
engine/tests/: README.md  _fixtures.py  ci_check_skips.py  test_access_gate.py  test_build_cache.py  test_build_id.py  test_build_report.py  test_canonical_parity.py  test_canonical_store.py  test_collections.py  test_conditioning_report.py  test_contract_generate_cli.py  test_contract_generated_in_sync.py  test_contract_order.py  test_contribute_argv_pin.py  test_convention_gates.py  test_convention_gates_realdata.py  test_coord_access.py  test_coord_qc.py  test_coords_of.py  test_dimensionality_pipeline.py  test_empty_build.py  test_feed.py  test_golden_edi.py  test_ingest_normalize.py  test_license_gate.py  test_license_instrument_vectors.py  test_license_text.py  test_manifest.py  test_mini_yaml_parity.py  test_mtcat.py  test_mth5_input.py  test_mth5_roundtrip.py  test_mtm_fill_mask.py  test_pathological.py  test_pid_resolution.py  test_proc_note_email_scrub.py  test_real_dialects.py  test_refresh_pid_status.py  test_related_identifiers_smeta.py  (+9 more)
engine/tests/fixtures/: license_instrument_vectors.json  safe_component_vectors.json
engine/tests/fixtures/errcols-survey/transfer_functions/edi/: ERRCOLS01.edi
engine/tests/fixtures/filled-survey/: survey.yaml
engine/tests/fixtures/filled-survey/transfer_functions/edi/: FILLED01.edi
engine/tests/fixtures/golden/: tf_old_slice.json
engine/tests/fixtures/pid-survey/: survey.yaml
engine/tests/fixtures/pid-survey/transfer_functions/edi/: PID01.edi  PID02.edi
engine/tests/real_dialects/: edl_birrp_st01.edi  lemi_birrp_wg.edi  phoenix_empower_A01.edi
gateway/: __init__.py  __main__.py  app.py  builddisplay.py  checklist.py  clamd.py  config.py  curator_auth.py  curatorpage.py  db.py  editor_form.py  jobs.py  mailer.py  metaedit.py  orcid.py  phaseqc.py  pidcheck.py  publish.py  requirements-dev.txt  requirements.txt  serve_state.py  states.py  statuspage.py  totp.py  upload.py  uploader_keys.py  zipsafety.py
maintainer/: ADR-001-repo-structure.md  C10-GatewayDesign.md  C11-CuratorDesign.md  C11b-PiiAcknowledge.md  C13-UploadDesign.md  C18-BuildCacheDesign.md  C20-TfCompletenessDesign.md  C25-ConventionGates.md  C31-MetadataEditorDesign.md  C32-BundlesVersionsDesign.md  C33-OperatorDocsDesign.md  C34-IntakeFilesDesign.md  C35b-GitTruthDesign.md  C41-SurveyRetirement.md  C42-CoordinateAccess.md  C43-CuratorWorkbench.md  C45-UsageAnalytics.md  C47-PublicBridge.md  README.md  UX4-MapAuslampScaling.md  UX5-TreeCollections.md
portal/: .gitignore  README.md  about.html  add-survey.html  config.js  index.html  package-lock.json  package.json  portal.config.yaml  version.js
(+196 files in other folders)
